--- a/readme
+++ b/readme
@@ -1,6 +1,12 @@
 Для запуска приложение необходимо установить зависимости из requirements.txt
 pip install -r requirements.txt
 
-Выполнить команду запуска
 
+Выполнить миграции
+python manage.py migrate
+
+Создать учетную запись администратора
+python manage.py createsuperuser
+
+Выполнить команду запуска
 python manage.py runserver
